--- a/.gitignore
+++ b/.gitignore
@@ -2,8 +2,8 @@
 ###########################
 *multimeter*
 .screeps.json
-dist/*
-node_modules/*
+dist/**
+node_modules/**
 # src/lib(trackable)/*/
 
 # Compiled source #
