--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,7 @@
 .screeps.json
 dist/**
 node_modules/**
-# src/lib(trackable)/*/
+# src/lib(trackable)/**/**/
 
 # Compiled source #
 ###################
