--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "grunt-contrib-clean": "^2.0.0",
     "grunt-contrib-copy": "^1.0.0",
     "grunt-contrib-uglify": "^4.0.1",
+    "grunt-contrib-uglify-es": "^3.3.0",
     "grunt-file-append": "0.0.7",
     "grunt-jsbeautifier": "^0.2.13",
     "grunt-rsync": "^3.0.0",
