--- a/.prettierrc
+++ b/.prettierrc
@@ -1,7 +1,8 @@
 {
+  "bracketSpacing": false,
   "semi": true,
-  "tabWidth": 2,
-  "printWidth": 120,
   "singleQuote": false,
-  "trailingComma": "all"
+  "tabWidth": 2,
+  "trailingComma": "all",
+  "proseWrap": "never"
 }
