--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,19 +1,18 @@
 {
   "compilerOptions": {
-    "module": "esnext",
-    "lib": ["esnext"],
-    "target": "es2017",
+    "allowSyntheticDefaultImports": true,
+    "allowUnreachableCode": false,
+    "baseUrl": "./src",
+    "declaration": true,
+    "experimentalDecorators": true,
+    "lib": ["ESNext"],
+    "module": "ESNext",
     "moduleResolution": "Node",
+    "noImplicitReturns": false,
     "outDir": "dist",
-    "baseUrl": "src/",
     "sourceMap": true,
     "strict": true,
-    "experimentalDecorators": true,
-    "noImplicitReturns": true,
-    "allowSyntheticDefaultImports": true,
-    "allowUnreachableCode": false
+    "target": "ES2017",
   },
-  "exclude": [
-    "node_modules"
-  ]
+  "include": ["./src/**/*"]
 }
